@@ -13,6 +13,8 @@ HBase Change Log
                (Stu Hood and Bryan Duxbury via Stack)
    HBASE-28    thrift put/mutateRow methods need to throw IllegalArgument exceptions
                (Dave Simpson via Bryan Duxbury via Stack)
+   HBASE-2     hlog numbers should wrap around when they reach 999
+               (Bryan Duxbury via Stack)
 
   IMPROVEMENTS
    HBASE-415   Rewrite leases to use DelayedBlockingQueue instead of polling
